--- a/FE/src/index.css
+++ b/FE/src/index.css
@@ -12,4 +12,12 @@
     .form-container {
         @apply max-w-2xl w-full backdrop-filter p-8;
     }
+    .title-text {
+        @apply text-3xl font-bold mb-6 text-center;
+    }
+    .btn {
+        @apply mt-2 w-full p-4 text-primary bg-secondary bg-opacity-50 font-bold rounded-2xl transition duration-200
+     hover:from-secondary focus:outline-none focus:ring-2 focus:ring-primary focus:ring-offset-2
+     focus:ring-offset-primary disabled:opacity-50 disabled:cursor-not-allowed;
+    }
 }
